src/tui/snapshots/herald__tui__sidebar__tests__sidebar_empty.snap
---
source: src/tui/sidebar.rs
expression: output
---
┌ Sessions (0) ──────────────┐
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
└────────────────────────────┘
