src/tui/snapshots/herald__tui__sidebar__tests__sidebar_multiple_statuses.snap
---
source: src/tui/sidebar.rs
expression: output
---
┌ Sessions (5) ──────────────┐
│ ○ starting [starting]      │
│ ◐ running [running]        │
│▸● needs-input [needs input]│
│ ✓ stopped [stopped]        │
│ ✗ errored [error]          │
│                            │
│                            │
│                            │
│                            │
│                            │
└────────────────────────────┘
