src/tui/snapshots/herald__tui__sidebar__tests__sidebar_single_starting.snap
---
source: src/tui/sidebar.rs
expression: output
---
┌ Sessions (1) ──────────────┐
│▸○ my-session [starting]    │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
└────────────────────────────┘
