src/tui/snapshots/herald__tui__sidebar__tests__sidebar_unfocused.snap
---
source: src/tui/sidebar.rs
expression: output
---
┌ Sessions (2) ──────────────┐
│▸◐ session-a [running]      │
│ ◐ session-b [running]      │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
└────────────────────────────┘
